# wildered

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  references.md
tests/: test_directive.py  test_entity.py  test_group.py  test_source_code.py  utils.py  utils_copy.py
tests/example_scripts/: basic.py  group.py  invalid.py  invalid_constraint_2.py  invalid_requires.py  invalid_resists.py  new_class.py  old_imports.py
tests/expected_scripts/: class.py  function.py  get_class.py  get_function.py  method.py  method_with_ancestor.py  module.py  source_unparse.py  updated.py  updated_signature.py
tests/test_context/: test_hint.py  test_task_group.py  utils.py
tests/test_context/example_scripts/: basic_butterfly.py  butterfly_group.py  file_level.py  file_level_invalid.py  method_butterfly.py  wander.py  without_butterfly.py
tests/test_context/example_scripts/hint/: aggregate_hint.py  expression_hint.py  non_relative_import.py  relative_hint.py
tests/test_source_code/: test_directive.py  test_entity.py  test_group.py  test_source_code.py
tests/test_source_code/example_scripts/: allow_multiple.py  basic.py  invalid_context.py  invalid_context_2.py  new_class_sign.py  new_function.py  new_function_sign.py  new_imports.py  new_method.py  new_method_sign.py  others.py
tests/test_source_code/expected_scripts/: function.py  method.py  method_with_ancestor.py  module.py  source_unparse.py  updated.py  updated_imports.py  updated_signature.py
wildered/: __init__.py  directive.py  group.py  logger.py  models.py  utils.py
wildered/ast/: directive_parser.py  source_code.py  utils.py
wildered/ast_parser/: __init__.py  directive_parser.py  source_code.py  utils.py
wildered/context/: autocomplete.py  decorator.py  dependency.py  directives.py  prompts.py  tasks.py  utils.py
wildered/context/cli/: cli.py
wildered/context/commands/: scan.py
wildered/context/prompts/: coder.md  write_test.md
wildered/cst/: directive_parser.py  source_code.py  utils.py
wildered/cst_parser/: directive_parser.py  source_code.py  utils.py
