[tool.poetry]
name = "wildered"
version = "0.2.3"
description = ""
authors = ["engkheng <ongengkheng929@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/outday29/wildered"

[tool.poetry.scripts]
wildered = 'wildered.context.cli.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
ast-comments = "^1.0.1"
libcst = "^1.0.0"
langchain = "^0.0.198"
wander = "^0.1.0"
typer = "^0.9.0"
pyperclip = "^1.8.2"
jinja2 = "^3.1.2"
loguru = "^0.7.0"
guidance = "^0.0.64"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
pytest = "^7.3.1"
black = "^23.3.0"
poethepoet = "^0.20.0"
pytest-cov = "^4.1.0"
pytest-sugar = "^0.9.7"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}
mkdocs-material = "^9.1.15"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest tests -s"
ruff-format = "ruff --select I --fix ."
ruff-lint = "ruff ."
black-format = "black ."
black-lint = "black . --check"
format = [
    "ruff-format",
    "black-format"
]
lint = [
    "ruff-lint",
    "black-lint"
]

[tool.black]
exclude = [
    "expected_scripts",
    "example_scripts"
]
include = [
    "wildered/*"
]

[tool.ruff]
select = [
    "E",
    "F",
    "I"
]
exclude = [
    "expected_scripts",
    "example_scripts"
]
